[package]
name = "tyfers"
version = "0.2.0"
authors = ["\"ferhatgec\""]
edition = "2018"
description = "file-type information crate"
keywords = ["rust", "file", "type", "info", "marker"]
readme = "README.md"
repository = "https://github.com/ferhatgec/tyfers"
documentation = "https://docs.rs/tyfers"
license = "MIT"

include = [
    ".gitignore",
    "Cargo.toml",
    "src/*.rs"
]
